64x CLIPSJNI Removed deprecated methods