@@ -13,11 +13,11 @@ public class FontProperties extends JPanel
    protected JList<Integer> sizeList;
    protected FontDialog frame;
    public final static Integer [] fontSizes = 
-      { new Integer(9),  new Integer(10), new Integer(11), new Integer(12), 
-        new Integer(13), new Integer(14), new Integer(16), new Integer(18), 
-        new Integer(20), new Integer(22), new Integer(24), new Integer(26), 
-        new Integer(28), new Integer(32), new Integer(36), new Integer(48), 
-        new Integer(64) };
+      { Integer.valueOf(9),  Integer.valueOf(10), Integer.valueOf(11), Integer.valueOf(12), 
+        Integer.valueOf(13), Integer.valueOf(14), Integer.valueOf(16), Integer.valueOf(18), 
+        Integer.valueOf(20), Integer.valueOf(22), Integer.valueOf(24), Integer.valueOf(26), 
+        Integer.valueOf(28), Integer.valueOf(32), Integer.valueOf(36), Integer.valueOf(48), 
+        Integer.valueOf(64) };
    public final static String[] fontStyles = { "Regular" , "Italic" , "Bold" , "Bold Italic" };
 
    /******************/
